# wezterm-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  run.sh  suggestions.md
docs/plans/: 2026-03-20-wezterm-tui-settings.md
docs/superpowers/plans/: 2026-03-28-v1-features.md  2026-04-01-live-preview.md
docs/superpowers/specs/: 2026-04-01-live-preview-design.md
src/wezterm_tui/: __init__.py  __main__.py  app.py  color_schemes.py  config.py  diff.py  export.py  history.py  importer.py  lua_gen.py  preview.py  profiles.py  schema.py
src/wezterm_tui/data/: color_schemes.json
src/wezterm_tui/screens/: __init__.py  base.py  colors.py  keybindings.py
tests/: test_app.py  test_color_schemes.py  test_config.py  test_diff.py  test_export.py  test_history.py  test_importer.py  test_keybindings.py  test_lua_gen.py  test_preview.py  test_profiles.py  test_schema.py  test_validation.py
