[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wezterm-tui"
version = "0.1.0"
description = "TUI settings manager for WezTerm"
requires-python = ">=3.12"
dependencies = [
  "textual>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[project.scripts]
wezterm-tui = "wezterm_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wezterm_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
