[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wezterm-tui"
version = "1.1.0"
description = "TUI settings manager for WezTerm"
license = "MIT"
readme = "README.md"
authors = [
  { name = "Darko Kuzmanovic" },
]
requires-python = ">=3.12"
dependencies = [
  "textual>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[project.scripts]
wezterm-tui = "wezterm_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wezterm_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
